<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/app_lock_title">

    <PreferenceCategory
        android:key="app_lock_cat_general"
        android:title="@string/app_lock_category_general">

        <Preference
            android:key="app_lock_enable"
            android:title="@string/app_lock_enable_title"
            android:summary="@string/app_lock_enable_summary" />

        <Preference
            android:key="app_lock_locked_apps"
            android:title="@string/app_lock_locked_apps_title"
            android:summary="@string/app_lock_locked_apps_summary"
            android:enabled="false" />

        <Preference
            android:key="app_lock_credentials"
            android:title="@string/app_lock_credentials_title"
            android:summary="@string/app_lock_credentials_summary"
            android:enabled="false" />

        <Preference
            android:key="app_lock_relock"
            android:title="@string/app_lock_relock_title"
            android:summary="@string/app_lock_relock_summary"
            android:enabled="false" />
    </PreferenceCategory>

</PreferenceScreen>
